# CMake-gitinfo

./: .travis.yml  CMakeLists.txt  README.md
cmake/: CPackDeploy.cmake  FindGit.cmake  FindGitInfo.cmake
